# scout

./: .gitignore  CLAUDE.md  pyproject.toml
scout/: __init__.py  agent.py  categorizer.py  cli.py  extractor.py  mcp_server.py  query_generator.py  scraper.py  synthesizer.py  types.py
scout/formatters/: __init__.py  json_fmt.py  markdown_fmt.py  text_fmt.py
scout/sources/: __init__.py  github.py  hn.py  web.py
