[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-research"
version = "0.1.0"
description = "Agentic web research tool powered by Scrapling. Research any topic autonomously across multiple sources."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TROZLAN", email = "chris@trozlan.com"}
]
keywords = [
    "research",
    "web-scraping",
    "agentic",
    "automation",
    "data-extraction",
    "ai-research",
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "scrapling[fetchers]>=0.4",
    "click>=8.3.0",
    "orjson>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
scout = "scout.cli:main"

[project.urls]
Homepage = "https://github.com/TROZLAN/scout"
Repository = "https://github.com/TROZLAN/scout"

[tool.setuptools.packages.find]
where = ["."]
include = ["scout*"]

[tool.ruff]
line-length = 120
target-version = "py310"
